--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="./assets/src/premium_photo-1744876542325-ba8c297af1e8.avif">
     <link rel="stylesheet" href="./assets/css/home.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/404.css">
+    <link rel="stylesheet" href="./assets/css/vacancies.css">
 
 </head>
 
@@ -130,7 +132,7 @@
                     <h3>Empresa</h3>
                 </li>
                 <li>
-                    <a href="#home">
+                    <a href="#0">
                         <svg>
                             <use xlink:href="#pages"></use>
                         </svg>
@@ -201,7 +203,7 @@
                 </div>
             </div>
         </section>
-        <section class="app"></section>
+        <section id="app"></section>
         <footer class="page-footer">
     
         </footer>
